2009-08-23  Ulrich Mueller  <ulm@gentoo.org>

	* eselect-mode-keywords.el (eselect-mode-keywords-multilib):
	Change font to font-lock-type-face.

2009-08-21  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el:
	* eselect-mode-keywords.el: Add no-byte-compile to file variables.
	These files are loaded by gentoo-syntax.el at compile time,
	therefore the .elc files are not needed at run time.

	* gentoo-syntax.el (ebuild-mode-portdir): New variable.
	(ebuild-mode-licenses, ebuild-mode-use-flags): New variables,
	initialised from license and profile directories of Portage tree.
	(ebuild-mode-restrict-list): New variable.
	(ebuild-mode-arch-list): Initialise from profile directory.
	(ebuild-mode-arch-stable-list): Variable removed.
	(ebuild-mode-insert-skeleton): Interactively ask for values.
	Move function behind mode definitions and completion code.
	(ebuild-mode-menu): Add ebuild-mode-insert-skeleton to menu.
	(ebuild-mode-all-keywords-unstable): New function for this very
	common operation, bind to C-c C-b key (mnemonics: "bump").

2009-08-20  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-make-keywords-list): Increase
	max-specpdl-size to avoid an error in regexp-opt for Emacs 21.
	At present, a minimum value of 650 is needed (while it is only
	600 in Emacs 21).

2009-08-20  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-kde4-functions),
	(ebuild-mode-keywords-kde4-base),
	(ebuild-mode-keywords-kde4-meta): Add new functions for KDE 4
	eclasses

	* gentoo-syntax.el (ebuild-mode-insert-skeleton): Add new function
	which inserts a skeleton ebuild on C-c C-n.  Code example taken
	from exheres-mode written by Elias Pipping.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python): Add
	keywords from reworked python.eclass

2009-08-17  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-font-lock-keywords)
	(eselect-mode-font-lock-keywords): It is more efficient to collect