@@ -1,3 +1,8 @@
+2009-08-25  Christian Faulhammer  <fauli@gentoo.org>
+
+	* gentoo-syntax.texi: New file for coming manual
+	* Makefile: Generate Info file and add it on tarball generation
+
 2009-08-23  Ulrich Mueller  <ulm@gentoo.org>
 
 	* eselect-mode-keywords.el (eselect-mode-keywords-multilib):
